# goskey_signature_collector

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_bot.py
.github/workflows/: actions.yml
data/: .gitignore
src/: cli.py  main.py  run_bot.py
src/bot/: bot.py  context.py
src/bot/config_data/: config.py
src/bot/database/: database.py  models.py
src/bot/filters/: filters.py
src/bot/handlers/: admin_handlers.py  common_handlers.py  user_handlers.py
src/bot/keyboards/: appeal_kb.py  main_menu.py
src/bot/lexicon/: lexicon.py
src/bot/schemas/: schemas.py
src/bot/services/: common.py
src/signature_extractor/: cli.py  main.py
tests/: test_simple.py
tests/bot/: conftest.py  db_factories.py  factories.py  test_admin_handlers.py  test_bot.py  test_user_handlers.py
tests/signature_extractor/: test_simple.py
tests/signature_extractor/fixtures/KEP/: Результат_оказания_услуги_11_29_41.pdf.sig
tests/signature_extractor/fixtures/mass/: IMG_20231227_085120.jpg.sig
